# Gestion-Rh-UI/src/app/services/models/statistique-event-result.ts
@@ -3,4 +3,6 @@
 export interface StatistiqueEventResult {
   eventCountEmployeeRegistered?: number;
   eventNumberOfSeats?: number;
+  eventPourcentage?: number;
+  eventTitre?: string;
 }
