# Gestion-Rh-UI/src/app/services/models/statistique-formation-result.ts
@@ -3,4 +3,6 @@
 export interface StatistiqueFormationResult {
   formationCountEmployeeRegistered?: number;
   formationNumberOfSeats?: number;
+  formationPourcentage?: number;
+  formationTitre?: string;
 }
