# src/main/java/com/saiph/application/GestionRH/Domain/entities/Statistique/StatistiqueUserByDepartementResult.java
@@ -1,4 +1,4 @@
-package com.saiph.application.GestionRH.Domain.entities;
+package com.saiph.application.GestionRH.Domain.entities.Statistique;
 
 import com.saiph.application.GestionRH.Enum.DepartementName;
 import lombok.Data;
